MailMerge example ported to Java

--- a/Beginner/MailMerge/MailMerge.csproj
+++ b/Beginner/MailMerge/MailMerge.csproj
@@ -54,20 +54,20 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="letter.docx">
+    <None Include="template\letter.docx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="data.csv">
+    <None Include="template\data.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
     <None Include="Readme.md" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="sig1.png">
+    <Content Include="template\sig1.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="sig2.gif">
+    <Content Include="template\sig2.gif">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
