--- a/RunAll/RunAll.csproj
+++ b/RunAll/RunAll.csproj
@@ -89,6 +89,14 @@
       <Project>{C15803E4-2567-4CFE-AF78-7D1341A4214F}</Project>
       <Name>MailMerge</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Beginner\NamedRange\NamedRange.csproj">
+      <Project>{9104479D-955D-4928-B537-FCBBEAEBED35}</Project>
+      <Name>NamedRange</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Beginner\PushDownExample\PushDownExample.csproj">
+      <Project>{A379EB73-E072-46EC-B1DD-7D463C6E5EE2}</Project>
+      <Name>PushDownExample</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Beginner\WordLinks\WordLinks.csproj">
       <Project>{4C158D75-A416-460F-8F7B-57B0A4815C1A}</Project>
       <Name>WordLinks</Name>
@@ -105,7 +113,7 @@
       <Project>{172BA03B-8863-4724-B22D-0DFD225CCF46}</Project>
       <Name>SpreadsheetGrouping</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Beginner\ToFormulaConversion %28.NET%29\ToFormulaConversion.csproj">
+    <ProjectReference Include="..\Beginner\ToFormulaConversion\ToFormulaConversion.csproj">
       <Project>{FC6EC7C4-51A3-4516-8F40-D71B801DE5D0}</Project>
       <Name>ToFormulaConversion</Name>
     </ProjectReference>
