More example sharing
Pivot and spreadsheet grouping shared between .NET and Java

--- a/Beginner/SpreadsheetGrouping/SpreadsheetGrouping.csproj
+++ b/Beginner/SpreadsheetGrouping/SpreadsheetGrouping.csproj
@@ -52,7 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Grouping.xlsx">
+    <None Include="template\Grouping.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
