--- a/Beginner/PivotExample/PivotExample.csproj
+++ b/Beginner/PivotExample/PivotExample.csproj
@@ -52,7 +52,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Readme.md" />
     <None Include="template\Pivot.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
