--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,8 @@
         <module>Beginner/WordLinks</module>
         <module>Beginner/ToFormulaConversion</module>
         <module>Intermediate/CollapseRegion (Java)</module>
-        <module>Intermediate/AlternativeProperty (Java)</module>
-        <module>Intermediate/BoolOverride (Java)</module>
+        <module>Intermediate/BoolOverride</module>
+        <module>Intermediate/AlternativeProperty</module>
         <module>Intermediate/HtmlToExcel (Java)</module>
         <module>Intermediate/SharedCollection (Java)</module>
         <module>Intermediate/ChartExample</module>
@@ -140,6 +140,11 @@
         <dependency>
             <groupId>hr.ngs.templater.example</groupId>
             <artifactId>limits-example</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>hr.ngs.templater.example</groupId>
+            <artifactId>alternative-property-example</artifactId>
             <version>1.0</version>
         </dependency>
         <dependency>
