--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,8 @@
         <module>Intermediate/CollapseRegion</module>
         <module>Intermediate/BoolOverride</module>
         <module>Intermediate/AlternativeProperty</module>
-        <module>Intermediate/HtmlToExcel (Java)</module>
+        <module>Intermediate/HtmlToWord</module>
+        <module>Intermediate/HtmlToExcel</module>
         <module>Intermediate/SharedCollection (Java)</module>
         <module>Intermediate/ChartExample</module>
         <module>Intermediate/QuestionnairePlugin</module>
@@ -41,7 +42,7 @@
         <module>Intermediate/ResultSetExample (Java)</module>
         <module>Intermediate/DocxImport</module>
         <module>Intermediate/ExcelContextRules</module>
-        <module>Intermediate/Formulas (Java)</module>
+        <module>Intermediate/Formulas</module>
         <module>Intermediate/Pictures (Java)</module>
         <module>Intermediate/WordTables</module>
         <module>Intermediate/TemplaterJson (Java)</module>
@@ -156,6 +157,11 @@
         <dependency>
             <groupId>hr.ngs.templater.example</groupId>
             <artifactId>html-excel-example</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>hr.ngs.templater.example</groupId>
+            <artifactId>html-word-example</artifactId>
             <version>1.0</version>
         </dependency>
         <dependency>
