Readme update. Better explain main use case. More examples sharing
All relevant examples are shared (only some specific data types are not)

--- a/Beginner/WebExample (.NET)/TemplaterWeb.csproj
+++ b/Beginner/WebExample (.NET)/TemplaterWeb.csproj
@@ -90,7 +90,7 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <None Include="Readme.md" />
-    <None Include="template.docx">
+    <None Include="template\template.docx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <EmbeddedResource Include="templater.lic" />
