--- a/Beginner/WebExample (.NET)/Web.config
+++ b/Beginner/WebExample (.NET)/Web.config
@@ -10,7 +10,7 @@
         <compilation debug="true" targetFramework="4.0" />
     </system.web>
     <system.webServer>
-        <defaultDocument>
+        <defaultDocument enabled="true">
             <files>
                 <clear />
                 <add value="WebService1.asmx?op=TestTemplater" />
