--- a/RunAll/RunAll.csproj
+++ b/RunAll/RunAll.csproj
@@ -149,17 +149,33 @@
       <Project>{9ED8DC2A-ACF6-4594-BF84-AE1F713692AE}</Project>
       <Name>Formulas</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Intermediate\HtmlToExcel\HtmlToExcel.csproj">
+      <Project>{210CEFEB-A80D-4958-B83E-09930BDA3711}</Project>
+      <Name>HtmlToExcel</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Intermediate\HtmlToWord\HtmlToWord.csproj">
       <Project>{3DED053C-9B71-4CD7-BEA2-1CA9963D9C78}</Project>
       <Name>HtmlToWord</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Intermediate\ListsAndTables %28.NET%29\ListsAndTables.csproj">
+    <ProjectReference Include="..\Intermediate\LimitPlugins\LimitPlugins.csproj">
+      <Project>{30B412CC-C247-47D2-989A-FB338E10BA13}</Project>
+      <Name>LimitPlugins</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Intermediate\ListsAndTables\ListsAndTables.csproj">
       <Project>{72F9D78C-1DB1-4858-84C5-EDF239E0F0EE}</Project>
       <Name>ListsAndTables</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Intermediate\Pictures\Pictures.csproj">
+      <Project>{17D7FF35-744F-4201-8731-7666E4C06BA9}</Project>
+      <Name>Pictures</Name>
     </ProjectReference>
     <ProjectReference Include="..\Intermediate\QuestionnairePlugin\QuestionnairePlugin.csproj">
       <Project>{81A89939-E6C7-4EA2-8B28-FA7CEF51A2AF}</Project>
       <Name>QuestionnairePlugin</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Intermediate\SharedCollection\SharedCollection.csproj">
+      <Project>{41B425F1-B0B3-4287-B7AB-E99FFD412F26}</Project>
+      <Name>SharedCollection</Name>
     </ProjectReference>
     <ProjectReference Include="..\Intermediate\WordTables\WordTables.csproj">
       <Project>{E76E5BCF-D7C9-41AC-B29A-B1BF6F3166A8}</Project>
