TemplaterServer in .NET core

--- a/Advanced/TemplaterServer/pom.xml
+++ b/Advanced/TemplaterServer/pom.xml
@@ -67,5 +67,10 @@
                 </executions>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>template</directory>
+            </resource>
+        </resources>
     </build>
 </project>
