--- a/RunAll/RunAll.csproj
+++ b/RunAll/RunAll.csproj
@@ -179,6 +179,10 @@
       <Project>{72F9D78C-1DB1-4858-84C5-EDF239E0F0EE}</Project>
       <Name>ListsAndTables</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Intermediate\MissingProperty\MissingProperty.csproj">
+      <Project>{AF4F0BF6-87C2-4A49-AFF0-CA8FBE5C53F2}</Project>
+      <Name>MissingProperty</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Intermediate\Pictures\Pictures.csproj">
       <Project>{17D7FF35-744F-4201-8731-7666E4C06BA9}</Project>
       <Name>Pictures</Name>
