Improvements and new examples
Make Android work without Xalan (use stax instead)
Remove usage of thread locals in AlternativeProperty (use references instead)
Show how to get streaming behavior with iterator and how to stream XML.
Pass xml instruction via XML instead of tag metadata.

--- a/Beginner/AndroidExample/app/build.gradle
+++ b/Beginner/AndroidExample/app/build.gradle
@@ -4,11 +4,15 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "hr.ngs.templater.example"
-        minSdkVersion 19
+        minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     buildTypes {
         release {
@@ -39,6 +43,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
     implementation 'hr.ngs.templater:templater:7.0.0'
+    implementation 'stax:stax:1.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
