--- a/Advanced/Streaming/Streaming.csproj
+++ b/Advanced/Streaming/Streaming.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{5BB2AABB-A28F-404F-8C37-DBE122E893F5}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CsvStreaming</RootNamespace>
-    <AssemblyName>CsvStreaming</AssemblyName>
+    <RootNamespace>Streaming</RootNamespace>
+    <AssemblyName>Streaming</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -39,7 +39,7 @@
       <HintPath>..\..\packages\DotNetZip.1.13.0\lib\net40\DotNetZip.dll</HintPath>
       <Private>True</Private>
     </Reference>
-	<Reference Include="NGS.Templater">
+    <Reference Include="NGS.Templater">
       <HintPath>..\..\packages\Templater.7.0.0\lib\Net40\NGS.Templater.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
     </Reference>
@@ -62,6 +62,11 @@
     <None Include="packages.config" />
     <None Include="Readme.md" />
     <None Include="template\input.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="template\input.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
