--- a/Advanced/Streaming/pom.xml
+++ b/Advanced/Streaming/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>hr.ngs.templater.example</groupId>
-    <artifactId>csv-streaming-example</artifactId>
+    <artifactId>streaming-example</artifactId>
     <packaging>jar</packaging>
     <version>7.0.0</version>
-    <name>CSV streaming</name>
+    <name>Streaming</name>
     <url>https://github.com/ngs-doo/TemplaterExamples</url>
 
     <properties>
